modify create cluster logic
